fix: vertical tabs: text was overlapping on windows xp machines http://bugs.activestate.com/show_bug.cgi?id=87984 rn=
(integrated from komodo (trunk) change 57628 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@6500 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/win/tabs/verticaltabs.css
+++ b/src/chrome/komodo/skin/plat/win/tabs/verticaltabs.css
@@ -59,3 +59,16 @@ tabbox.vertical_tabs tree {
 .tabpanel-vertical-text-hbox {
   -moz-appearance: -moz-win-browsertabbar-toolbox;
 }
+
+/* Special Windows XP styling, see bug 87984. */
+tabbox.vertical_tabs[os="winxp"] .vertical-button-text
+{
+    margin-top          : -3px;
+    margin-bottom       : -3px;
+}
+tabbox.vertical_tabs[os="winxp"] .vertical-button-text-uppercase
+{
+    /* Captialized characters need a little more room. */
+    margin-top          : -2px;
+    margin-bottom       : -2px;
+}
